--- a/package.json
+++ b/package.json
@@ -8,9 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
+    "@vee-validate/i18n": "^4.1.20",
+    "@vee-validate/rules": "^4.1.20",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
+    "bootstrap-modal-js": "^2.0.0-beta3",
     "core-js": "^3.6.5",
+    "mitt": "^3.0.0",
+    "popper.js": "^1.16.1",
+    "tooltip.js": "^1.3.3",
+    "vee-validate": "^4.4.5",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-axios": "^3.2.4",
+    "vue-loading-overlay": "^4.0.3",
+    "vue-router": "^4.0.0-0",
+    "vue3-loading-overlay": "0.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -23,7 +36,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2"
   }
